--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <!-- <img src="img/main/design.jpg" class="img-other" alt="design"> -->
             
                 <h1>
-                    Hi, I’m Sebastian a <span class="hero_gradientText"> visual designer.</span><br>I create engaging UI &amp; websites.
+                    Hi, I’m Sebastian a <span class="hero_gradientText"> visual designer.</span><br>I think, create and deliver UI &amp; websites.
                 </h1>
                 <div>
                     <p class="subtitle">Welcome to a portfolio showcase that's more than pixels – it's a direct connection between my design skills and logical thinking. 
