--- a/about.html
+++ b/about.html
@@ -72,9 +72,8 @@
                         </p>
                 </div>
                 <div>
-                    <a class="btn-primary-normal" href="files/Sebastian-Kozicki-Resume.pdf" target="_blank">Download
-                        full
-                        resume</a>
+                    <a class="btn-primary-normal" href="files/Sebastian Kozicki_ui_web_designer_resume_2024.pdf" target="_blank">Download
+                        full resume</a>
                 </div>
             
             </div>
