--- a/about.html
+++ b/about.html
@@ -94,8 +94,11 @@
             <p>
                 As a freelancer and agency graphic designer, I aim to bring the client's vision to life, 
                 no matter the constraints. Hard work and creativity are my means to surpass expectations 
-                and deliver captivating results. I have worked for different industries, preparing various 
-                marketing and branding materials.
+                and deliver captivating results. I have worked for various industries, preparing countless
+                materials, some websites, concepts, or consulting ready-made solutions. 
+                I also collaborate on a deployed application. I am not a traditional UI/Web designer 
+                because my interests in design are broader. I honestly believe that to be a good designer 
+                you have to be curious about the world and constantly looking for something more.
             </p>
 
             <p>
