--- a/about.html
+++ b/about.html
@@ -107,6 +107,11 @@
                 of a bit of luck and a lot of hard work.
 
             </p>
+            <p><strong>Achievements that I am proud of</strong><br>
+                After a month of starting work, designing for the company's most important client; 
+                after 6 months, taking over the department and organizing cooperation between 
+                the production and sales departments; I've never missed a deadline.
+            </p>
             <p><strong>My recipe for being a good co-worker and employee?</strong><br>
                 A high work ethic, sincere commitment, truthfulness, helpfulness, and honesty make 
                 me a trustworthy and reliable collaborator with a creative flair.
