--- a/home-fix-hub.html
+++ b/home-fix-hub.html
@@ -264,10 +264,10 @@
     <div class="full-width">
         <div class="container">
         <div class="grid-container-2">
-            <div>
+            
             <h2>Takeways</h2>
-            <img src="img/concepts/homefixhub_pop-up@1x.png" alt="homefixhub_pop-up">
-        </div>
+            <!-- <img src="img/concepts/homefixhub_pop-up@1x.png" alt="homefixhub_pop-up"> -->
+       
             <div>
             <div>
                 <h5>USABILITY</h5>
