change the title

--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
                         <div class="card-content">
                             <p class="text-xs">Product design / Android / iOS</p>
     
-                            <h4>Salomon application</h4>
+                            <h4>
+
+                                One application, many possibilities</h4>
                             <p class="text-sm">A native application for people who want to quickly select sports equipment for themselves. It can integrate all kinds of sports equipment which the company produces.
                             </p>
                         </div>
@@ -173,7 +175,8 @@
                         <div class="card-content">
                             <p class="text-xs">Web design</p>
     
-                            <h4>Accordion Abuse Entertaiment</h4>
+                            <h4>
+                                DJ, radio, photographer - why not?</h4>
                             <p class="text-sm">Website for an American company from the entertainment industry offering 3 different services: photo sessions, promotion of music events, radio &amp; DJ service.
                             </p>
                         </div>
@@ -200,7 +203,8 @@
                 </a>
                     <div class="card-content">
                         <p class="text-xs">Web Application / Responsive Design</p>
-                        <h4>Toilet application</h4>
+                        <h4>
+                            It competes with diaper manufacturers</h4>
                         <p class="text-sm">A responsive web application to help people find toilets quickly and effectively, considering different users' needs and geolocation.
                         </p>
                     </div>
