--- a/toilet-app.html
+++ b/toilet-app.html
@@ -67,7 +67,7 @@
             </div>
             <div>
                 
-                <img src="img/toilet-app/toilet@1x/toilet-main.jpg" alt="salomon-app" class="img-other">
+                <img src="img/toilet-app/toilet@2x/toilet-main.jpg" alt="toilet-app" class="img-other">
 
                 
             </div>
