--- a/aae-website.html
+++ b/aae-website.html
@@ -110,8 +110,12 @@
     <div class="container">
         <div class="grid-container-2">
             <h2>Project overview</h2>
+            <div>
                 <p>
-                    This website was meant to showcase a young venture where two people wanted to combine their businesses because of their love for Conjunto and Tejano music. That's how Accordion Abuse Entertainment came into being.</p>
+                    This website was meant to showcase a young venture where two people wanted to combine their businesses because of their 
+                    love for Conjunto and Tejano music. That's how Accordion Abuse Entertainment came into being.</p>
+                <p>Since the project was not finally implemented, I will focus on how I designed individual UI components.</p>
+            </div>
         </div>
             <div class="flex-item">
 
@@ -171,18 +175,12 @@
     <div class="container">
         <div class="grid-container-2">
             <h2>After the talks, <br>it's time to get to work</h2>
-            <p>It only took two meetings to agree on the structure, style, and direction we wanted. 
-                Since that was one of my first "commercial" projects, I started with establishing 
-                the grid and breakpoints for the layout. Then, I selected typography and colors. 
-                I designed UI components based on site architecture and an essential style guide.</p>
+            <p>It took two meetings to agree on the structure, style, and direction we wanted. 
+                </p>
         </div>
         
     </div> 
-    <div class="container">
-        <h4>Breakpoints</h4>
-        <img class="img-other center-img-container" src="img/aae-web/aae-breakpoints.png"
-            alt="aae-structure">
-    </div>
+ 
     <div class="container">
         <h4>Typography &amp; Colors</h4>
         <img class="img-other center-img-container" src="img/aae-web/Typography-Colors.png"
