--- a/work.html
+++ b/work.html
@@ -155,7 +155,7 @@
                     <h2>Micro UI<br>Case Studies</h2></div>
                    <div><p>
                     Sometimes, I am not involved in the whole design process, or 
-                    I redesign only part of the existing website or application. 
+                    I redesign only part of the existing website / application. 
                     That is why I call them micro-case studies - projects for real clients 
                     or private projects in cooperation with others.
                     </p>
