--- a/about.html
+++ b/about.html
@@ -108,9 +108,9 @@
 
             </p>
             <p><strong>Achievements that I am proud of</strong><br>
-                After a month of starting work, designing for the company's most important client; 
-                after 6 months, taking over the department and organizing cooperation between 
-                the production and sales departments; I've never missed a deadline.
+                After a month of starting work, designing for the company's <strong>most important client;</strong> 
+                after 6 months, <strong>taking over the department</strong> and organizing cooperation between 
+                the production and sales departments; implementation of a website on Wordpress <strong>one afternoon</strong>; I've never missed a deadline.
             </p>
             <p><strong>My recipe for being a good co-worker and employee?</strong><br>
                 A high work ethic, sincere commitment, truthfulness, helpfulness, and honesty make 
