--- a/index.html
+++ b/index.html
@@ -216,6 +216,28 @@
                 <a class="btn-tertiary-normal" href="work.html">More projects &gt;&gt;</a>
             </div>
         </div>
+
+
+        <div class="container-stats">
+            <div id="statistic">
+
+                <div class="stats">
+                    <h2>8+</h2>
+                    <p>Years Of Experience</p>
+                </div>
+
+
+                <div class="stats">
+                    <h2>500+</h2>
+                    <p>Visual Projects</p>
+                </div>
+
+                <div class="stats">
+                    <h2>100%</h2>
+                    <p>of happy employers</p>
+                </div>
+            </div>
+        </div>
         
         
 
