--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
                 <div class="stats">
                     <h2>100%</h2>
-                    <p>of happy employers</p>
+                    <p>Of Happy Employers</p>
                 </div>
             </div>
         </div>
