--- a/about.html
+++ b/about.html
@@ -125,19 +125,21 @@
             <div id="statistic">
 
                 <div class="stats">
-                    <h2>8+</h2>
-                    <p>Years Of Experience</p>
+                    <h2>12+</h2>
+                    <p>
+                        Applications Used</p>
                 </div>
 
 
                 <div class="stats">
-                    <h2>500+</h2>
-                    <p>Visual Projects</p>
+                    <h2>8</h2>
+                    <p>
+                        Various Industries For Which I Worked</p>
                 </div>
 
                 <div class="stats">
-                    <h2>99,999%</h2>
-                    <p>of happy clients</p>
+                    <h2>&infin;</h2>
+                    <p>Positive Qualities 😇</p>
                 </div>
             </div>
         </div>
@@ -269,8 +271,10 @@
                     Education
                 </h5>
                 <p>
-                    Master of Science in Mechanics - Cracow University of Technology,<br> Postgraduates studies:
-                    Advertising Graphics - Tischner European University,<br> Internet Marketing - AGH University of Cracow.
+                    Master of Science in Mechanics - Cracow University of Technology,<br>
+                    Postgraduates studies: Advertising Graphics - Tischner European University,<br>
+                    Postgraduates studies: Internet Marketing - AGH University of Cracow,<br>
+                    Certificate in UI Design with Front-end specialization - CareerFoundry.
                 </p>
             </div>
             <div class="facts">
@@ -296,7 +300,7 @@
                     Favorite quote
                 </h5>
                 <p>
-                    "Insanity: doing the same thing over and over again and expecting different results"
+                    "Insanity: doing the same thing over and over again and expecting different results."
 
                 </p>
             </div>
